<resources>
    <string name="app_name" translatable="false"> convertidora_two </string>
    <string name="name"> Ingrese su Nombre </string>
    <string name="lastname"> Ingrese su Apellido </string>
    <string name="email"> Ingrese su Email </string>
    <string name="password"> Ingrese su Contraseña </string>
    <string name="button1"> Crear cuenta </string>
    <string name="imagen1"> descripcion de imagen </string>
    <string name="datos"> Tus datos ingresados :</string>
    <string name="button2" translatable="false"> . </string>
    <string name="toast1"> Por favor, complete todos los campos. </string>
    <string name="toast2"> Por favor, ingrese un nombre valido. </string>
    <string name="toast3"> Por favor, ingrese un apellido valido. </string>
    <string name="toast4"> Por favor, ingrese un email valido. </string>
    <string name="toast5"> su contraseña debe tener minimo 8 caracteres. </string>
    <string name="welcome">Bienvenido  </string>
</resources>