<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="679dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imagen1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/purple"
            android:contentDescription="@string/imagen1"
            app:srcCompat="@drawable/perfil" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bordername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/material_dynamic_neutral10"
            app:hintTextColor="@color/material_dynamic_neutral60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:backgroundTint="@color/white"
                android:hint="@string/name"
                android:inputType="text|textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral10"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/borderlastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/material_dynamic_neutral10"
            app:hintTextColor="@color/material_dynamic_neutral60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:backgroundTint="@color/white"
                android:hint="@string/lastname"
                android:inputType="text|textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral10"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/borderemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/material_dynamic_neutral10"
            app:hintTextColor="@color/material_dynamic_neutral60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress|textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral10"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/borderpass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColorHint="@color/material_dynamic_neutral10"
            app:hintTextColor="@color/material_dynamic_neutral60">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background_normal"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/material_dynamic_neutral10"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="260dp"
        android:layout_height="83dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="525dp"
        android:backgroundTint="@color/purple"
        android:text="@string/button1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>